==> dpgeorge/micropython/ports/ambiq-apollo/machine_pin.c <==
#include <stdio.h>
#include <string.h>
#include "py/runtime.h"
#include "py/mphal.h"
#include "shared/runtime/mpirq.h"
#include "modmachine.h"
#include "extmod/virtpin.h"
#include "pin.h"
#define GPIO_MODE_IN (0)
#define GPIO_MODE_OUT (1)
#define GPIO_MODE_OPEN_DRAIN (2)
#define GPIO_MODE_TRISTATE (3)
#define GPIO_MODE_ALT (4)
#define GPIO_IRQ_ALL (0xf)

STATIC mp_obj_t machine_pin_obj_init_helper(const machine_pin_obj_t *self, size_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {
    // Parse args.
    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    // Set initial value (do this before configuring mode/pull).
    if (args[ARG_value].u_obj != mp_const_none) {
        if (mp_obj_is_true(args[ARG_value].u_obj)) {
            am_hal_gpio_output_set(self->id);
        } else {
            am_hal_gpio_output_clear(self->id);
        }
    }

    // Get current pin configuration.
    am_hal_gpio_pincfg_t cfg;
    am_hal_gpio_pinconfig_get(self->id, &cfg);

    // Configure mode.
    if (args[ARG_mode].u_obj != mp_const_none) {
        mp_int_t mode = mp_obj_get_int(args[ARG_mode].u_obj);
        if (mode == GPIO_MODE_IN) {
            cfg = (am_hal_gpio_pincfg_t)AMAP_PIN_PINCFG_INPUT;
        } else if (mode == GPIO_MODE_OUT) {
            cfg = (am_hal_gpio_pincfg_t)AMAP_PIN_PINCFG_OUTPUT;
        } else if (mode == GPIO_MODE_OPEN_DRAIN) {
            cfg = (am_hal_gpio_pincfg_t)AMAP_PIN_PINCFG_OPENDRAIN;
        } else if (mode == GPIO_MODE_TRISTATE) {
            cfg = (am_hal_gpio_pincfg_t)AMAP_PIN_PINCFG_TRISTATE;
        } else {
            // Alternate function.
            // TODO
            //gpio_set_function(self->id, args[ARG_alt].u_int);
        }
    }

    // Configure pull (unconditionally because None means no-pull).
    uint32_t pull = AM_HAL_GPIO_PIN_PULLUP_NONE;
    if (args[ARG_pull].u_obj != mp_const_none) {
        pull = mp_obj_get_int(args[ARG_pull].u_obj);
    }
    cfg.GP.cfg_b.ePullup = pull;

    // Set new pin configuration.
    am_hal_gpio_pinconfig(self->id, cfg);

    return mp_const_none;
}

STATIC mp_obj_t machine_pin_call(mp_obj_t self_in, size_t n_args, size_t n_kw, const mp_obj_t *args) {
    mp_arg_check_num(n_args, n_kw, 0, 1, false);
    machine_pin_obj_t *self = self_in;
    if (n_args == 0) {
        // Get pin.
        return MP_OBJ_NEW_SMALL_INT(am_hal_gpio_input_read(self->id));
    } else {
        // Set pin.
        bool value = mp_obj_is_true(args[0]);
        if (value) {
            am_hal_gpio_output_set(self->id);
        } else {
            am_hal_gpio_output_clear(self->id);
        }
        return mp_const_none;
    }
}

STATIC mp_obj_t machine_pin_irq(size_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {
    enum { ARG_handler, ARG_trigger, ARG_hard };
    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_handler, MP_ARG_OBJ, {.u_rom_obj = MP_ROM_NONE} },
        { MP_QSTR_trigger, MP_ARG_INT, {.u_int = MP_HAL_PIN_TRIGGER_FALL | MP_HAL_PIN_TRIGGER_RISE} },
        { MP_QSTR_hard, MP_ARG_BOOL, {.u_bool = false} },
    };
    machine_pin_obj_t *self = MP_OBJ_TO_PTR(pos_args[0]);
    if (is_cyw43_pin(self)) {
        mp_raise_ValueError(MP_ERROR_TEXT("expecting a regular GPIO Pin"));
    }

    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args - 1, pos_args + 1, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    machine_pin_irq_obj_t *irq = machine_pin_get_irq(self->id);

    if (n_args > 1 || kw_args->used != 0) {
        // Update IRQ data.
        mp_obj_t handler = args[ARG_handler].u_obj;
        mp_uint_t trigger = args[ARG_trigger].u_int;
        bool hard = args[ARG_hard].u_bool;
        mp_hal_pin_interrupt(self->id, handler, trigger, hard);
    }
    return MP_OBJ_FROM_PTR(irq);
}

STATIC mp_uint_t pin_ioctl(mp_obj_t self_in, mp_uint_t request, uintptr_t arg, int *errcode) {
    (void)errcode;
    machine_pin_obj_t *self = self_in;
    switch (request) {
        case MP_PIN_READ: {
            return am_hal_gpio_input_read(self->id);
        }
        case MP_PIN_WRITE: {
            if (arg) {
                am_hal_gpio_output_set(self->id);
            } else {
                am_hal_gpio_output_clear(self->id);
            }
            return 0;
        }
    }
    return -1;
}

STATIC mp_uint_t machine_pin_irq_trigger(mp_obj_t self_in, mp_uint_t new_trigger) {
    machine_pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
    machine_pin_irq_obj_t *irq = MP_STATE_PORT(machine_pin_irq_obj[self->id]);
    gpio_set_irq_enabled(self->id, GPIO_IRQ_ALL, false);
    irq->flags = 0;
    irq->trigger = new_trigger;
    gpio_set_irq_enabled(self->id, new_trigger, true);
    return 0;
}
